 * Maintenance: Upgrade Willow to v1.6.2 to support MIME type data without reliance on `imghdr` (Jake Howard)
 * Maintenance: Replace `imghdr` with Willow's built-in MIME type detection (Jake Howard)
 * Maintenance: Migrate all other `data-tippy` HTML attribute usage to the Stimulus data-*-value attributes for w-tooltip & w-dropdown (Subhajit Ghosh, LB (Ben) Johnston)


5.1.2 (xx.xx.20xx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Avoid use of `ignore_conflicts` when creating extra permissions for snippets, for SQL Server compatibility (Sage Abdullah)
 * Fix: Ensure sequence on `wagtailsearchpromotions_query` table is correctly set after migrating data (Jake Howard)
 * Fix: Change spreadsheet export headings to match listing view column headings (Christer Jensen, Sage Abdullah)
 * Fix: Fix numbers, booleans, and `None` from being exported as strings (Christer Jensen)
 * Fix: Restore fallback on full-word search for snippet choosers and generic index views (Matt Westcott)
 * Maintenance: For Python 3.13 support - upgrade Willow to v1.6.2, replace `imghdr` with Willow's built-in MIME type detection (Jake Howard)


5.1.1 (14.08.2023)
~~~~~~~~~~~~~~~~~~

 * Introduce `wagtail.admin.ui.tables.BooleanColumn` to display boolean values as icons (Sage Abdullah)
 * Fix: Show not-`None` falsy values instead of blank in generic table cell template (Sage Abdullah)
 * Fix: Fix `read_only` panels for fields with translatable choice labels (Florent Lebreton)


5.1 (01.08.2023)
~~~~~~~~~~~~~~~~

 * Add support for read-only FieldPanels (Andy Babic)
 * Add support for query-time boosting to Elasticsearch 6 and above (Shohan Dutta Roy)
 * Add support for Elasticsearch 8 (Matt Westcott, Wesley van Lee)
 * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
 * Return filters from `parse_query_string` as a `QueryDict` to support multiple values (Aman Pandey)