@@ -73,6 +73,7 @@ depth: 1
  * Upgrade Willow to v1.6.2 to support MIME type data without reliance on `imghdr` (Jake Howard)
  * Replace `imghdr` with Willow's built-in MIME type detection (Jake Howard)
  * Migrate all other `data-tippy` HTML attribute usage to the Stimulus data-*-value attributes for w-tooltip & w-dropdown (Subhajit Ghosh, LB (Ben) Johnston)
+ * Replace `@total_ordering` usage with comparison functions implementation (Virag Jain)
 
 
 ## Upgrade considerations - changes affecting all projects
